# flower_garden

./: .gitignore  README.md  main.py  pyproject.toml  tournament_runner.py
.github/workflows/: main.yml
core/: engine.py  exchange.py  garden.py  gardener.py  micronutrients.py  nursery.py  runner.py  settings.py
core/plants/: plant.py  plant_dto.py  plant_variety.py  species.py
core/ui/: visualizer.py
examples/: config10_1.json  config10_2.json  config10_3.json  config11_1.json  config11_2.json  config11_3.json  config12_1.json  config12_2.json  config12_3.json  config13_1.json  config13_2.json  config13_3.json  config14_1.json  config14_2.json  config14_3.json  config15_1.json  config15_2.json  config15_3.json  config16_1.json  config16_2.json  config16_3.json  config17_1.json  config17_2.json  config17_3.json  config18_1.json  config18_2.json  config18_3.json  config19_1.json  config1_1.json  config1_2.json  config1_3.json  config20_2.json  config20_3.json  config21_1.json  config21_2.json  config21_3.json  config22_1.json  config22_2.json  config22_3.json  config23_1.json  (+40 more)
gardeners/: random_gardener.py
gardeners/group1/: README.md  best_params.json  gardener.py  gardener_fixed_k.py  gardener_hybrid.py  gardener_mixed_k.py  gardener_prev.py  tune_parameters.py
gardeners/group10/: flower_garden_project.txt  gardener.py  test_main.sh
gardeners/group2/: adaptivegardener.py  balance.py  gardener.py  gardenerPrev.py  gardenerfirstclass.py  greedygardener.py  temp.py
tests/: test_plant.py  test_plant_growth.py  test_plant_production.py
(+125 files in other folders)
